# projects

autogen-test/: pyproject.toml  readme.md
autogen-test/.cache/42/: cache.db
blog/: Cargo.toml
blog/src/: main.rs
publish/: Cargo.toml
swarm-test/: pyproject.toml  readme.md  shell.nix
zet/: Cargo.toml
zshtools/: Cargo.toml
zshtools/src/: main.rs
