[tool.poetry]
name = "autogen-test"
version = "0.1.0"
description = ""
authors = ["Richard Bownes <rjbownes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
autogenstudio = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
